--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button type="button">Novo jogo</button>
         <img src="target.png" alt="" class='cursor'>
       <img src="duck.gif" alt="" class='duck'> 
-        <img src="blood.png" alt="" class='blood'>
+        <img src="blood.gif" alt="" class='blood'>
     </div>
 
 
